pov-check-health (0.13.2) UNRELEASED; urgency=medium

  * check-health -g:
    - skip squashfs mounts (such as used by snapd).
  * check-virtualenvs:
    - correctly handle directory names with spaces in them,
    - look for virtualenvs made with obsolete Python versions.

 -- Marius Gedminas <marius@gedmin.as>  Sat, 31 Oct 2020 19:42:52 +0200

pov-check-health (0.13.1) xenial; urgency=medium

  * debian/control:
    - add mlocate to Recommends, because check-virtualenvs needs it, and there
      are discussions about removing mlocate from the standard Ubuntu installs.

 -- Marius Gedminas <marius@gedmin.as>  Thu, 12 Sep 2019 16:12:37 +0300

pov-check-health (0.13.0) xenial; urgency=medium

  * check-virtualenvs:
    - new option -n to print the cp commands that -f would execute,
    - ignore docker/flatpak/snap/lxd containers (GH #23).
  * check-health:
    - fix checknfs to actually check the local mountpoint, not the remote
      export name.
  * New checks:
    - check_no_matching_lines (GH #5),
    - checkthreads (GH #8),
    - checklocale (GH #16),
    - check_postmap_up_to_date (GH #20),
    - checkcert_smtp_starttls (GH #10).
  * Fix shellcheck warnings in all the scripts.

 -- Marius Gedminas <marius@gedmin.as>  Fri, 03 May 2019 19:06:40 +0300

pov-check-health (0.12.1) trusty; urgency=medium

  * check-health -g:
    - skip 'systemd --user' which exists only when there are login sessions.
  * check-ssl-certs(8):
    - mention the synopses of checssl* functions.
  * check-web-health(8):
    - minor wording and capitalization fixes.

 -- Marius Gedminas <marius@gedmin.as>  Wed, 06 Dec 2017 17:16:33 +0200

pov-check-health (0.12.0) precise; urgency=medium

  * all checkers return a status code in addition to emitting a warning
    (0 if all's fine, 1 if the check warned about something), so you can
    do things like 'checkproc foo || service foo start'.

 -- Marius Gedminas <marius@gedmin.as>  Fri, 27 Jan 2017 16:01:22 +0200
